# mandelbrot-rs

./: Cargo.toml  README.md
.cargo/: config.toml
compile-in-memory/: Cargo.toml
compile-in-memory/src/: lib.rs
gtk-gl/: Cargo.toml
gtk-gl/resources/: main.css  resources.gresource.xml  window.ui
gtk-gl/shaders/: fragment_shader.glsl  vertex_shader.glsl
gtk-gl/src/: main.rs  util.rs
loader/: Cargo.toml
loader/src/: fn_ptr_trait.rs  lib.rs  owned_func.rs  owned_var.rs  ref_func.rs  ref_var.rs
mandelbrot/: Cargo.toml  build.rs
mandelbrot/resources/: main.css  resources.gresource.xml  window.ui
mandelbrot/src/: custom_fractal.rs  generation.rs  main.rs
mandelbrot/src/custom_fractal/: lexer.rs  parser.rs  type_checker.rs
resources/: window.ui
src/: generation.rs  main.rs  utils.rs
watch/: Cargo.toml
watch/src/: common.rs  lib.rs  local.rs  sync.rs
