[package]
name = "compile-in-memory"
version = "0.2.0"
edition = "2021"
authors = ["Zachary S"]
description = "A library to dynamically compile and load C/C++ code at runtime, using the platform's host compiler."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zachs18/mandelbrot-rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

[dependencies]
libc = "0.2"
loader = { version = "0.2.1", path = "../loader", default-features = false }

[dev-dependencies]
num-complex = "0.4"
