[package]
name = "gtk-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
gtk = "0.15.5"
libc = "0.2.129"

[dependencies.loader]
package = "loader"
path = "../loader"

[dependencies.watch]
package = "watch"
path = "../watch"
