[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"

[features]
default = ["custom_fractals"]
custom_fractals = ["loader", "compile-in-memory", "nom", "either"]

[dependencies]
num-complex = "0.4"
gtk = "0.15"
blocking = "1.2"
num-traits = "0.2.15"

[dependencies.image]
version = "0.24"
default-features = false

# Alignment bugfix not yet on crates.io
[dependencies.f128]
# version = "0.2.10"
git = "https://github.com/jkarns275/f128"
rev = "2065957660a7c6cb5148da550ef1b532ab8227da"

[dependencies.watch]
package = "watch"
path = "../watch"

[dependencies.loader]
optional = true
package = "loader"
path = "../loader"

[dependencies.compile-in-memory]
optional = true
package = "compile-in-memory"
path = "../compile-in-memory"

[dependencies.nom]
optional = true
version = "7"

[dependencies.either]
optional = true
version = "1"

[build-dependencies]
gio = "0.15"
